# Capstone-Project

./: .gitignore  main.py  requirements.txt
DockerFileTesters/: Dockerfile-Test1
Movement/: motors.py  movement.py  navigation.py
Plow/: test_plow.py
Tests/: test_chase_ball.py  test_integration.py  test_movement_integration.py  test_vision.py
Utils/: constants.py  helpers.py
Vision/: ball_tracking.py  calibration.py  config.json  goal_detection.py  hsv_range_detector.py  test_image.py  testcvmodel.py  vision.py
Vision/turbopi_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
examples/example/: face_tracking.py
src/capstone_brain/: package.xml  setup.cfg  setup.py
src/capstone_brain/capstone_brain/: camera_publisher.py  detector_node.py  fsm_node.py  pid.py  plow_calibrator.py  tracking_node.py
src/capstone_brain/launch/: soccer_brain.launch.py
src/capstone_interfaces/: CMakeLists.txt  package.xml
src/capstone_interfaces/msg/: SoccerDetection.msg  SoccerDetections.msg  TrackingStatus.msg
